@@ -12,8 +12,10 @@ ddetect (1.06) UNRELEASED; urgency=low
         only post-reboot for now since those modules aren't in
         linux-kernel-di-powerpc-*.
       + Cope with /proc/device-tree/aliases/mac-io pointing to a symlink.
+  * Bastian Blank
+    - Add archdetect-deb package.
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 12 Sep 2004 16:20:46 +0100
+ -- Bastian Blank <waldi@debian.org>  Thu, 23 Sep 2004 16:49:39 +0200
 
 ddetect (1.05) unstable; urgency=low
 
